[package]
name = "waketimectl"
version = "0.1.0"
authors = ["waketimed project contributors"]
license = "MIT"
readme = "README.md"
# repository = ""
# documentation = ""
# homepage = ""
description = """
CLI for waketimed, the real-time clock suspend/wake-up scheduling daemon.
"""
keywords = ["suspend", "resume", "sleep", "wake", "rtc", "rtcwake"]
edition = "2021"

[[bin]]
name = "waketimectl"
path = "src/main.rs"

[dependencies]
waketimed_core = { path = "../waketimed_core" }
