[package]
name = "waketimed"
version = "0.5.0"
authors = ["waketimed project contributors"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jistr/waketimed"
documentation = "https://github.com/jistr/waketimed/blob/main/docs/user/index.md"
description = """
Real-time clock suspend/wake-up scheduling daemon.
"""
keywords = ["power-management", "suspend", "sleep", "rtcwake", "linux", "linux-mobile"]
edition = "2021"

[[bin]]
name = "waketimed"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = "0.4.19"
env_logger = "0.9.0"
getset = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.16"
nix = "0.24.1"
regex = "1.5.5"
rhai = { version = "1.7.0", features = ["no_object", "no_function", "no_module", "no_closure"] }
rust-embed = { version = "6.4.1", features = ["debug-embed"] }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_yaml = "0.9.13"
signal-hook = "0.3.13"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "net", "sync", "time"] }
zbus = { version = "2.2.0", default-features = false, features = ["tokio"] }
# zbus_macros = "2.1.1"
# zbus_polkit = "2.0.1"
zvariant = "3.2.1"
