[package]
name = "waketimed_core"
version = "0.1.0"
authors = ["waketimed project contributors"]
license = "MIT"
readme = "README.md"
# repository = ""
# documentation = ""
# homepage = ""
description = """
Library of commons for subprojects of waketimed, \
the real-time clock suspend/wake-up scheduling daemon.
"""
keywords = ["suspend", "resume", "sleep", "wake", "rtc", "rtcwake"]
edition = "2021"

[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
zvariant = "3.1.2"
